load(
  "//toolchain:toolchain_feature.bzl",
  "toolchain_feature",
  "toolchain_feature_group",
  "toolchain_feature_set")

package(default_visibility = ["//visibility:public"])

toolchain_feature(
  name = "common",
  enabled = True,
  copts = [
    "-no-canonical-prefixes",
    "-Wall",
    "-pedantic",
  ],
  cxxopts = [
    "-std=c++20",
    "-stdlib=libc++",
  ],
  linkopts = [
    "-fuse-ld=lld",
    "-pthread",
  ],
  libs = [
    "c++",
    "c++abi",
  ],
)

toolchain_feature_group(
  name = "compilation_mode",
)

toolchain_feature(
  name = "fastbuild",
  group = ":compilation_mode",
  copts = ["-O0"],
)

toolchain_feature(
  name = "dbg",
  group = ":compilation_mode",
  defines = ["NDEBUG"],
  copts = ["-g", "-O0"],
)

toolchain_feature(
  name = "opt",
  group = ":compilation_mode",
  copts = ["-O2"],
)

toolchain_feature_group(
  name = "linking_mode",
)

toolchain_feature(
  name = "static_linking_mode",
  group = ":linking_mode",
  linkopts = ["-static"],
)

toolchain_feature(
  name = "dynamic_linking_mode",
  group = ":linking_mode",
)

toolchain_feature_set(
  name = "clang_features",
  deps = [
    ":common",
    ":fastbuild",
    ":dbg",
    ":opt",
    ":static_linking_mode",
    ":dynamic_linking_mode",
  ],
)
