load(
  "//toolchain:toolchain_feature.bzl",
  "toolchain_feature",
  "toolchain_feature_set")

package(default_visibility = ["//visibility:public"])

toolchain_feature(
  name = "use_libcxx",
  enabled = True,
  cxxopts = [
    "-stdlib=libc++",
  ],
  libs = [
    "c++",
    "c++abi",
  ],
)

toolchain_feature(
  name = "use_lld",
  enabled = True,
  linkopts = [
    "-fuse-ld=lld",
  ],
)

toolchain_feature_set(
  name = "features",
  deps = [
    ":use_libcxx",
    ":use_lld",
    "//toolchain:features",
    "//toolchain:supports_start_end_lib",
    "//toolchain:pthread",
  ],
)
