load("@mousetrap_toolchains//toolchain:toolchain_tool.bzl", "toolchain_tool")
load("@mousetrap_toolchains//clang:clang_toolchain.bzl", "clang_toolchain")

clang_toolchain(
  name = "clang",
  tools = [
    ":cc",
    ":cxx",
    ":ar",
    ":strip",
  ],
  all_features = [
    "@mousetrap_toolchains//clang:features",
  ],
)

toolchain_tool(
  name = "cc",
  tool = "bin/clang",
  deps = [
    "bin/clang-{major_version}",
  ],
)

toolchain_tool(
  name = "cxx",
  tool = "bin/clang++",
  deps = [
    ":cc",
  ],
)

toolchain_tool(
  name = "ar",
  tool = "bin/llvm-ar",
)

toolchain_tool(
  name = "ld",
  tool = "bin/ld.lld",
  deps = [
    "bin/lld",
  ],
)

toolchain_tool(
  name = "strip",
  tool = "bin/llvm-strip",
)

toolchain_tool(
  name = "objcopy",
  tool = "bin/llvm-objcopy",
)

filegroup(
  name = "all_files",
  srcs = [":compiler_files"],
)

filegroup(
  name = "compiler_files",
  srcs = [
    ":cc",
    ":cxx",
    ":headers",
  ],
)

filegroup(
  name = "ar_files",
  srcs = [":ar"],
)

filegroup(
  name = "linker_files",
  srcs = [
    ":cxx",
    ":ld",
    ":ar",
    ":libs",
  ],
)

filegroup(
  name = "strip_files",
  srcs = [":strip"],
)

filegroup(
  name = "objcopy_files",
  srcs = [":objcopy"],
)

filegroup(
  name = "dwp_files",
  srcs = [],
)

filegroup(
  name = "headers",
  srcs = glob(
    include = [
      "include/c++/v1/**/*",
      "lib/clang/{version}/include/**/*",
    ]
  ),
)

filegroup(
  name = "libs",
  srcs = glob(
    include = [
      "lib/libc++*.a",
    ],
  ),
)
