load("//toolchain:toolchain_feature.bzl", "toolchain_feature", "toolchain_feature_set")

package(default_visibility = ["//visibility:public"])

toolchain_feature(
  name = "embedded",
  enabled = True,
  copts = [
    "-specs=nano.specs",
    "-mcpu=cortex-m0plus",
  ],
  cxxopts = [
    "-fno-exceptions",
    "-fno-rtti",
  ],
  linkopts = [
    "-nostartfiles",
  ],
)

toolchain_feature_set(
  name = "features",
  deps = [
    ":embedded",
    "//toolchain:features",
  ],
)
