load ("//gcc_arm_none_eabi:linker_script.bzl", "linker_script")

cc_library(
  name = "say",
  hdrs = ["say.h"],
  srcs = ["say.cc"],
)

cc_test(
  name = "hello",
  srcs = ["hello.cc"],
  deps = [
    ":say",
  ],
)

cc_binary(
  name = "blink",
  srcs = ["blink.cc"],
  deps = [":blink_ld"],
)

linker_script(
  name = "blink_ld",
  script = "blink.ld",
)
